--- a/themes/static/css/theme-cerl.css
+++ b/themes/static/css/theme-cerl.css
@@ -2,6 +2,7 @@
 :root {
   --color-header-bg:      #0d2b36;
   --color-header-text:    #f0f0f0;
+  --color-nav-active:     #1e6070;
   --color-heading:        #0d2b36;
   --color-heading-border: #2e7a8c;
   --color-accent:         #2e7a8c;
